# oss-context

./: Cargo.toml  README.md
docs/plans/: 2026-03-14-oss-context-design.md  2026-03-14-oss-context-implementation.md
src/: config.rs  discovery.rs  lib.rs  main.rs  mcp.rs  resolver.rs  store.rs  tools.rs  transport.rs
src/parser/: javadoc.rs  mod.rs  source.rs
tests/: integration.rs
