[package]
name = "oss-context"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io", "server-side-http"] }
rusqlite = { version = "0.34", features = ["bundled"] }
tree-sitter = "0.26"
tree-sitter-java = "0.23"
scraper = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }
quick-xml = { version = "0.37", features = ["serialize"] }
zip = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
dirs = "6"
shellexpand = "3"
anyhow = "1"
thiserror = "2"
